[package]
name = "dynarust_client"
version = "0.3.0"
edition = "2021"
description = "An official async Rust client for the DynaRust distributed key-value store."
license = "MIT OR Apache-2.0" 
repository = "https://github.com/yourfavDev/DynaRust" 
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest-eventsource = "0.6"
futures-util = "0.3"
async-stream = "0.3"